
[project]
name = "fibozoneai"
version = "0.1.0"
description = ""
authors = [
    {name = "Grzegorz Szymczyk",email = "xbravadox@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "streamlit (>=1.30.0)",
    "pandas (>=2.0.0)",
    "numpy (>=1.24.0)",
    "scipy (>=1.10.0)",
    "yfinance (>=0.2.35)",
    "psycopg2-binary (>=2.9.9)",
    "python-dotenv (>=1.0.0)",
    "sqlalchemy (>=2.0.0)",
    "scikit-learn (>=1.3.0)",
    "ta (>=0.11.0)",
    "plotly (>=5.18.0)",
    "joblib (>=1.3.0)",
    "openai (>=2.24.0,<3.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=7.0.0)",
    "pytest-cov (>=4.0.0)"
]
[tool.poetry]
package-mode = false